stripe integration first step

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
 # Google Analytics 4 Measurement ID, e.g. G-XXXXXXX
 NEXT_PUBLIC_GA_ID=
+
+# Stripe Configuration
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# App Configuration (can use NEXT_PUBLIC_SITE_URL if different)
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
