--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.9.0",
     "next": "14.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.74",
+    "@types/react-dom": "18.2.24",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "8.4.38",
+    "prettier": "3.2.5",
     "tailwindcss": "3.4.3",
-    "typescript": "5.4.5",
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.74",
-    "@types/react-dom": "18.2.24",
-    "prettier": "3.2.5"
+    "typescript": "5.4.5"
   }
 }
