--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "resend": "^6.1.0",
     "stripe": "^18.5.0"
   },
   "devDependencies": {
